--- a/files/styles.css
+++ b/files/styles.css
@@ -1,24 +1,125 @@
 .header {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     background-color: #1f2937;
 }
 
 .left-side {
     margin-left: 12px;
+    font-size: 24px;
+    color: #F9FAF8;
 }
 .right-side {
     display: flex;
     margin-right: 12px;
     gap: 12px;
-    color: white;
     align-items: center;
-    font-size: 12px;
 }
 
+a {
+    text-decoration: none;
+    color: #E5E7EB;
+    font-size: 18px;
+}
 
 h1 {
+    color: #F9FAF8;
+    font-size: 28px
+}
+
+.header-content {
+    display: flex;
+    background-color: #1f2937;
     color: white;
+    justify-content: space-around;
+    align-items: center;
+    height: 400px;
+}
+
+button {
+    background-color: #3882f6;
+    border-radius: 5px;
+    color: white;
+    width: 30%;
+    padding-top: 3px;
+    padding-bottom: 3px;
+}
+
+.left-main {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    justify-content: center;
+    /* padding-top: 30px;
+    padding-bottom: 60px;
+    margin-left: 90px; */
+    padding-left: 12px;
+    width: 45%;
+    height: 300px;
+    border: 3px blue solid;
+}
+
+.main-h1 {
+    font-size: 48px;
+    color: F9FAF8;
+}
+
+p {
+    color: lightgray;
     font-size: 18px;
-    align-self: center;
+}
+
+.main-image {
+    display: flex;
+    background-color: rgb(120, 120, 120);
+    width: 30%;
+    height: 300px;
+    justify-content: center;
+    align-items: center;
+}
+
+.information {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 16px;
+    width: 100%;
+}
+
+h2 {
+    display: flex;
+    justify-content: center;
+    margin-top: 10px;
+    font-size: 36px;
+    color: #1F2937;
+}
+
+.box-container {
+    display: flex;
+    justify-content: center;
+    gap: 16px;
+    flex-wrap: wrap;
+    width: 100%;
+}
+
+.box-wrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 8px;
+}
+
+.sentence {
+    width: 150px;
+}
+
+.info-box {
+    width: 100px;
+    height: 100px;
+    border-radius: 6px;
+    display: flex;
+    border: 3px rgb(0, 128, 255) solid;
+    justify-content: center;
+    align-items: center;
 }
