--- a/files/styles.css
+++ b/files/styles.css
@@ -149,6 +149,48 @@ h2 {
     align-self: flex-end;
     font-weight: bolder;
     padding-bottom: 10px;
-    margin-right: 100px;
-    
+    margin-right: 100px; 
+}
+
+.action-call {
+    height: 250px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    /* border: 3px red solid; */
+}
+
+.center-box {
+    display: flex;
+    justify-content: space-around;
+    border-radius: 4px;
+    background-color: #3882f6;
+    width: 75%;
+}
+
+.left-action {
+    /* border: 3px blue solid; */
+    width: 500px;
+}
+
+h3 {
+    color: white;
+    margin-bottom: 3px;
+}
+
+.p-action {
+    margin-top: 1px;
+    color: white;
+    font-weight: 10;
+}
+
+button {
+    border: 1px white solid;
+    width: 110px;
+    height: 25px;
+}
+
+.right-action {
+    display: flex;
+    align-items: center;
 }
