--- a/files/styles.css
+++ b/files/styles.css
@@ -62,9 +62,11 @@ button {
 .main-h1 {
     font-size: 48px;
     color: F9FAF8;
+    margin-bottom: 2px;
 }
 
-p {
+.main-p {
+    margin-top: 5px;
     color: lightgray;
     font-size: 18px;
 }
