--- a/files/styles.css
+++ b/files/styles.css
@@ -78,6 +78,8 @@ button {
     height: 300px;
     justify-content: center;
     align-items: center;
+    padding-left: 5px;
+    padding-right: 5px;
 }
 
 .information {
